--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <h1>VRONE PLUS</h1>
                         <p>VRONE</p>
                         <center>
-                            <button>Lihat VR <i class="fa-solid fa-angle-right"></i></button>
+                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>
                         </center>
                     </div>
                     <div class="card">
@@ -147,7 +147,7 @@
                         <h1>VRONE PLUS</h1>
                         <p>VRONE</p>
                         <center>
-                            <button>Lihat VR <i class="fa-solid fa-angle-right"></i></button>
+                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>
                         </center>
                     </div>
                 </div>
