--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 </div>
                 <div class="parent-preview">
                     <hr>
-                    <div class="preview align-items-center gap-3">
-                    <div class="item1">
+                    <div class="preview align-items-center gap-3 slider-container">
+                    <div class="item1 slider">
                         <img src="assets/img/Group 139.png" alt="">
                         <button class="teks1 border-0 rounded rounded-4 pe-3 ps-3">Kacamata VR</button>
                     </div>
@@ -139,7 +139,7 @@
                         <h1>VRONE PLUS</h1>
                         <p>VRONE</p>
                         <center>
-                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>
+                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>        
                         </center>
                     </div>
                     <div class="card">
@@ -147,7 +147,7 @@
                         <h1>VRONE PLUS</h1>
                         <p>VRONE</p>
                         <center>
-                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>
+                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>        
                         </center>
                     </div>
                 </div>
