update responsive tablet (maxwidth:820px)

--- a/index.html
+++ b/index.html
@@ -350,10 +350,10 @@
             <p class="text-center fs-1 fw-bold py-5">Kenali Komponen VR</p>
             <div class="float-end me-5">
               <div id="dekorasiKomponen1"></div>
-              <div class="mt-1 ms-5" id="dekorasiKomponen2"></div>
+              <div class="mt-1" id="dekorasiKomponen2"></div>
             </div>
             <div class="isiFrame6">
-              <div class="row" style="width: 100%;">
+              <div class="row row-cols-2 row-cols-lg-3 justify-content-center text-center" style="width: 100%;">
                 <div class="col">
                   <!-- dawadaw -->
                    <div class="row row-cols-2 mx-5">
@@ -383,7 +383,7 @@
             </div>
             <div class="ms-5 mt-5">
               <div id="dekorasiKomponen1"></div>
-              <div class="mt-1 ms-5" id="dekorasiKomponen2"></div>
+              <div class="mt-1" id="dekorasiKomponen2"></div>
             </div>
           </div>
         <!-- End Komponen  -->
@@ -411,7 +411,7 @@
                     placeholder="Nama produk"
                   />
                   <button
-                    class="mx-3 my-auto rounded btn fw-semibold justify-content-center align-self-center text-center"
+                    class="my-auto rounded btn fw-semibold justify-content-center align-self-center text-center"
                     id="buttonbandingkankiri"
                   >
                     Bandingkan
@@ -446,50 +446,52 @@
           <!-- End Halaman Banding -->
       
           <!-- Start Halaman Footer -->
-          <div class="row ps-5" id="footer">
-            <div class="col">
-              <ul class="fw-light">
-                <li class="list-group-item fw-bold fst-italic fs-5">Explore</li>
-                <li class="p-1 list-group-item">Beranda</li>
-                <li class="p-1 list-group-item">VR</li>
-                <li class="p-1 list-group-item">Bandingkan</li>
-                <li class="p-1 list-group-item">Panduan</li>
-              </ul>
-            </div>
-            <div class="col">
-              <ul>
-                <li class="list-group-item fw-bold fs-4">Vision</li>
-                <li class="p-1 list-group-item" id="wandiPengertianFooter">
-                  Virtual Reality atau biasa kita sebut VR adalah suatu teknologi yang
-                  memungkinkan manusia untuk melihat dunia yang berbeda.
-                </li>
-                <li class="list-group-item position-relative">
-                  <div class="d-flex fbutton">
-                    <input id="wandiInputFooter" type="text" placeholder="Masukan Pesan" class="form-control rounded-3"/>
-                    <button class="btn rounded-3" id="wandiButtonFooter">Kirim</button>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="col">
-              <img src="assets/img/Rectangle 84.png" id="wandiGambarFooter" />
-            </div>
-            <div class="d-flex justify-content-center">
-              <hr clas="" style="width: 95%;">
-            </div>
-            <div class="container">
-              <div class="row">
-                <div class="col-sm-5 col-md-5 ms-5 fw-medium">© Copyright 2024 by The Visionaries </div>
-                <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 text-end">
-                  <img src="assets/img/instagram.svg">
-                  <img src="assets/img/facebook.svg" class="mx-2">
-                  <img src="assets/img/linkedin.svg" class="me-2">
-                  <img src="assets/img/twitter.svg">
+           <div id="footer">
+               <div class="row ps-5" id="footer">
+                   <div class="col">
+                    <ul class="fw-light">
+                        <li class="list-group-item fw-bold fst-italic fs-5">Explore</li>
+                        <li class="p-1 list-group-item">Beranda</li>
+                        <li class="p-1 list-group-item">VR</li>
+                        <li class="p-1 list-group-item">Bandingkan</li>
+                        <li class="p-1 list-group-item">Panduan</li>
+                    </ul>
+                    </div>
+                    <div class="col">
+                    <ul>
+                        <li class="list-group-item fw-bold fs-4">Vision</li>
+                        <li class="p-1 list-group-item" id="wandiPengertianFooter">
+                        Virtual Reality atau biasa kita sebut VR adalah suatu teknologi yang
+                        memungkinkan manusia untuk melihat dunia yang berbeda.
+                        </li>
+                        <li class="list-group-item position-relative">
+                        <div class="d-flex fbutton">
+                            <input id="wandiInputFooter" type="text" placeholder="Masukan Pesan" class="form-control rounded-3"/>
+                            <button class="btn rounded-3" id="wandiButtonFooter">Kirim</button>
+                        </div>
+                        </li>
+                    </ul>
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/Rectangle 84.png" id="wandiGambarFooter" />
+                    </div>
+                    <div class="d-flex justify-content-center">
+                    <hr clas="" style="width: 95%;">
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-5 col-md-5 ms-5 fw-medium">© Copyright 2024 by The Visionaries </div>
+                            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 text-end">
+                                <img src="assets/img/instagram.svg">
+                                <img src="assets/img/facebook.svg" class="mx-2">
+                                <img src="assets/img/linkedin.svg" class="me-2">
+                                <img src="assets/img/twitter.svg">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <!-- End Halaman -->
+        <!-- End Halaman -->
            <script src="assets/js/script.js"></script>
            <script src="assets/js/img-slide.js"></script>
 </body>
