--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               <div class="mt-1" id="dekorasiKomponen2"></div>
             </div>
             <div class="isiFrame6">
-              <div class="row row-cols-2 row-cols-lg-3 justify-content-center text-center" style="width: 100%;">
+              <div class="row row-cols-2 row-cols-lg-3 justify-content-center" style="width: 100%;">
                 <div class="col">
                   <!-- dawadaw -->
                    <div class="row row-cols-2 mx-5">
@@ -372,11 +372,11 @@
                    </div>
                   <!-- dawadaw -->
                 </div>
-                <div class="col my-auto">
+                <div class="col my-auto text-center">
                   <img src="assets/img/vrkomponen.png" id="isiTengahKomponen">
                 </div>
                 <div class="col float-start my-auto">
-                  <p id="judulIsiTextKomponen" class="fw-semibold fs-4">Kacamata VR</p>
+                  <p id="judulIsiTextKomponen" class="fw-semibold">Kacamata VR</p>
                   <p id="isiTextKomponen">Layar VR penting karena memungkinkan melihat dunia virtual dengan tampilan warna tajam dan resolusi tinggi. </p>
                 </div>
               </div>
