--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="d-flex">
+              <div class="d-flex justify-content-center">
                 <div class="gambarBanding">
                   <img src="assets/img/Rectangle 173.png" class="border-bottom rounded-4 mb-3" />
                   <img src="assets/img\/download 3.png" class="border-bottom rounded-4" />
@@ -450,7 +450,7 @@
                <div class="row ps-5" id="footer">
                    <div class="col">
                     <ul class="fw-light">
-                        <li class="list-group-item fw-bold fst-italic fs-5">Explore</li>
+                        <li class="list-group-item fw-bold fst-italic" id="judulKiriFooter">Explore</li>
                         <li class="p-1 list-group-item">Beranda</li>
                         <li class="p-1 list-group-item">VR</li>
                         <li class="p-1 list-group-item">Bandingkan</li>
@@ -459,7 +459,7 @@
                     </div>
                     <div class="col">
                     <ul>
-                        <li class="list-group-item fw-bold fs-4">Vision</li>
+                        <li class="list-group-item fw-bold" id="judulTengahFooter">Vision</li>
                         <li class="p-1 list-group-item" id="wandiPengertianFooter">
                         Virtual Reality atau biasa kita sebut VR adalah suatu teknologi yang
                         memungkinkan manusia untuk melihat dunia yang berbeda.
