--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/navbar.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/responsive-wandi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     
 </head>
@@ -347,16 +348,16 @@
         </section>
         <!-- Start Komponen -->
         <div id="frame6">
-            <p class="text-center py-5">Kenali Komponen VR</p>
+            <p class="text-center py-5 judul">Kenali Komponen VR</p>
             <div class="float-end me-5">
               <div id="dekorasiKomponen1"></div>
               <div class="mt-1" id="dekorasiKomponen2"></div>
             </div>
             <div class="isiFrame6">
               <div class="row row-cols-2 row-cols-lg-3 justify-content-center" style="width: 100%;">
-                <div class="col">
+                <div class="col kumpulan-gambar">
                   <!-- dawadaw -->
-                   <div class="row row-cols-2 mx-5">
+                   <div class="row row-cols-2 mx-5 gambar">
                     <div class="col">
                       <img src="assets/img/controller.png" class="border rounded-4" id="kotakKomponen1">
                     </div>
@@ -372,7 +373,7 @@
                    </div>
                   <!-- dawadaw -->
                 </div>
-                <div class="col my-auto text-center">
+                <div class="col my-auto text-center main-image  ">
                   <img src="assets/img/vrkomponen.png" id="isiTengahKomponen">
                 </div>
                 <div class="col float-start my-auto">
@@ -391,9 +392,9 @@
           <!-- Start Halaman Banding -->
         <div id="frame7">
           <img src="assets/img/head-vr.png" id="gambartesting" class="mt-5 w-100" />
-          <div class="row container-fluid mt-5">
+          <div class="row parent-content container-fluid mt-5">
             <div class="col ms-4 adaaja">
-              <p class="fw-bold lh-base" id="judulPerbandingan">
+              <p class="fw-bold lh-base judul" id="judulPerbandingan">
                 Bandingkan Dengan Yang Lain
               </p>
               <div id="kelompokForm" class="p-5">
@@ -403,7 +404,7 @@
                   type="text"
                   placeholder="Nama produk"
                 />
-                <div class="d-flex mt-2">
+                <div class="d-flex input-bandingkan mt-2">
                   <input
                     id="bandingkanForm"
                     class="form-control"
@@ -425,18 +426,18 @@
             </div>
             <div class="col">
               <div class="d-flex justify-content-center">
-                <div class="gambarBanding">
-                  <img src="assets/img/Rectangle 173.png" class="border-bottom rounded-4 mb-3" />
+                <div class="gambarBanding atas">
+                  <img src="assets/img/Rectangle 173.png" class="border-bottom rounded-4 mb-3 a" />
                   <img src="assets/img\/download 3.png" class="border-bottom rounded-4" />
                 </div>
-                <div class="gambarBanding">
-                  <img src="assets/img/Rectangle 175.png" class="border-bottom rounded-4 mb-3" />
+                <div class="gambarBanding bawah">
+                  <img src="assets/img/Rectangle 175.png" class="border-bottom rounded-4 mb-3 a" />
                   <img src="assets/img/download 5.png" class="border-bottom rounded-4" />
                 </div>
               </div>
               <div class="d-flex justify-content-center mt-3">
                 <button class="btn d-flex justify-content-center align-self-center">
-                  Semua Produk
+                  <a href="page-extra/page-bandingkan.html" class="text-light">Semua Produk</a>
                   <img src="assets/img/chevron-right (1).svg" id="buttonbandingkan" />
                 </button>
               </div>
@@ -472,15 +473,15 @@
                         </li>
                     </ul>
                     </div>
-                    <div class="col">
+                    <div class="col gambar">
                         <img src="assets/img/Rectangle 84.png" id="wandiGambarFooter" />
                     </div>
                     <div class="d-flex justify-content-center">
                     <hr clas="" style="width: 95%;">
                     </div>
                     <div class="container">
-                        <div class="row">
-                            <div class="col-sm-5 col-md-5 ms-5 fw-medium">© Copyright 2024 by The Visionaries </div>
+                        <div class="row bottom">
+                            <div class="col-sm-5 col-md-5 ms-5 fw-medium cp"><p class="copyright">© Copyright 2024 by The Visionaries</p> </div>
                             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 text-end">
                                 <img src="assets/img/instagram.svg">
                                 <img src="assets/img/facebook.svg" class="mx-2">
